--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <section class="task-container">
-                    <p class="loading-text text-center mb-4">Loading...</p>
+                    <p class="loading text-center mb-4">Loading...</p>
                     <div class="tasks"></div>
                 </section>
             </div>
